Chore/update links (#308)
* chore/updated links to cbomkit org

Signed-off-by: san-zrl <san@zurich.ibm.com>

* chore/updated links to cbomkit org

Signed-off-by: san-zrl <san@zurich.ibm.com>

* chore/updated links to cbomkit org

Signed-off-by: san-zrl <san@zurich.ibm.com>

* chore/updated links to cbomkit org

Signed-off-by: san-zrl <san@zurich.ibm.com>

---------

Signed-off-by: san-zrl <san@zurich.ibm.com>

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,7 +23,7 @@ on:
 
 env:
   REGISTRY: "ghcr.io"
-  ORG: "PQCA"
+  ORG: "cbomkit"
   IMAGE_NAME: "cbomkit"
 
 jobs:
@@ -75,7 +75,7 @@ jobs:
         uses: advanced-security/maven-dependency-submission-action@v5
         if: github.event_name != 'pull_request'
       - name: Create CBOM
-        uses: PQCA/cbomkit-action@v2.1.1
+        uses: cbomkit/cbomkit-action@v2.1.1
         id: cbom
           # Persist CBOM after a job has completed and share
           # that CBOM with another job in the same workflow.
