--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <artifactId>cbomkit</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <organization>
-    <name>PQCA</name>
-    <url>https://github.com/PQCA</url>
+    <name>cbomkit</name>
+    <url>https://github.com/cbomkit</url>
   </organization>
   <licenses>
     <license>
@@ -35,7 +35,7 @@
   <repositories>
     <repository>
       <id>github</id>
-      <url>https://maven.pkg.github.com/PQCA/cbomkit-lib</url>
+      <url>https://maven.pkg.github.com/cbomkit/cbomkit-lib</url>
     </repository>
   </repositories>
 
