--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRESQL_AUTH_USERNAME} -d postgres" ]
+      test: [ "CMD-SHELL", "pg_isready ${POSTGRESQL_AUTH_USERNAME:+-U ${POSTGRESQL_AUTH_USERNAME}} -d postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
